infra/k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dpp-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dpp-api
  ports:
    - name: http
      port: 80
      targetPort: http
